--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@react-three/fiber": "^8.17.5",
-    "@types/three": "^0.167.1",
+    "next-themes": "^0.3.0",
+    "@react-three/fiber": "^8.16.8",
+    "@types/three": "^0.165.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.24",
-    "lucide-react": "^0.427.0",
-    "next": "14.2.5",
-    "next-themes": "^0.3.0",
+    "framer-motion": "^11.2.12",
+    "lucide-react": "^0.396.0",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "shadergradient": "^1.2.14",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.167.1"
+    "three": "0.154.0"
   },
   "devDependencies": {
     "@types/node": "^20",
